--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -55,6 +55,9 @@ parts:
 apps:
   energycoind:
     command: energycoind
+    daemon: simple
+    restart-condition: always
+    before: bootstrap
     plugs:
       - network
       - network-bind
