no march=native

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -55,8 +55,8 @@ parts:
 apps:
   energycoind:
     command: energycoind
-    daemon: simple
-    restart-condition: always
+#    daemon: simple
+#    restart-condition: always
     plugs:
       - network
       - network-bind
