--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,6 +8,12 @@ description: |
   Proof of Stake protocol. 
 base: core18
 confinement: strict
+architectures:
+  - build-on: amd64
+    run-on: amd64
+
+  - build-on: i386
+    run-on: i386
 parts:
   energycoind:
     plugin: make
