--- a/snap/gui/energycoind.desktop
+++ b/snap/gui/energycoind.desktop
@@ -4,7 +4,7 @@ Type=Application
 Version=1.6.1
 Encoding=UTF-8
 Name=Energycoin
-Icon=${SNAP}/energycoind.png
+Icon=${SNAP}/meta/gui/energycoind.png
 MimeType=x-scheme-handler/energycoin;
 Exec=energycoind.gui %u
 Terminal=false
